--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,7 @@
 .page-header {
   background-image: url("https://i.imgur.com/XmiigWx.png");
 }
+
+.project-name {
+  background-image: url("https://i.imgur.com/LVwk1L4.png");
+}
