--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,8 @@
 
 .page-header {
   background-image: url("https://i.imgur.com/XmiigWx.png");
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 .project-name {
