--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,10 @@
   background-image: url("https://i.imgur.com/XmiigWx.png");
   background-repeat: no-repeat;
   background-size: auto;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .project-name {
-  background-image: url("https://i.imgur.com/LVwk1L4.png");
+  //background-image: url("https://i.imgur.com/LVwk1L4.png");
 }
