--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-size: auto;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center top;
 }
 
 .project-name {
