--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,3 +14,27 @@
 .project-name {
   //background-image: url("https://i.imgur.com/LVwk1L4.png");
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
