--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+body {
+  background-color: #212129;
+}
+
 .page-header {
   background-image: url("https://i.imgur.com/XmiigWx.png");
   background-repeat: no-repeat;
