--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@ body {
   background-color: #212129;
 }
 
+.main-content {
+  background-color: #1d1d24; 
+}
+
 .page-header {
   background-image: url("https://i.imgur.com/XmiigWx.png");
   background-repeat: no-repeat;
