--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-
+    <meta property="og:title" content="Write your desired title">
+    <meta property="og:description" content="Write the body text here">
+    <meta property="og:image" content="https://hypixelfarms.github.io/images/1.jpeg">
+    
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
