--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta property="og:title" content="Write your desired title">
-    <meta property="og:description" content="Write the body text here">
+    <meta property="og:title" content="Otax Gaming">
+    <meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!
+">
     <meta property="og:image" content="https://otaxgaming.github.io/images/OTAXGaming.png">
     
     {% if site.google_analytics %}
