--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta property="og:title" content="Otax Gaming">
     <meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!
 ">
-    <meta property="og:image" content="https://croutons5.github.io/otaxgaming/images/OTAXGaming.png">
+    <meta property="og:image" content="https://otaxgaming.com/images/OTAXGaming.png">
     
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
