--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,13 +23,17 @@ body {
   //background-image: url("https://i.imgur.com/LVwk1L4.png");
 }
 
-.topnav {
+.navbar {
   overflow: hidden;
   background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-.topnav a {
+.navbar a {
   float: left;
+  display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -37,12 +41,7 @@ body {
   font-size: 17px;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
+.navbar a:hover {
+  background: #ddd;
   color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
 }
