--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,14 +23,16 @@ body {
   //background-image: url("https://i.imgur.com/LVwk1L4.png");
 }
 
+/* The navigation bar */
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 
+/* Links inside the navbar */
 .navbar a {
   float: left;
   display: block;
@@ -38,9 +40,9 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
 
+/* Change background on mouse-over */
 .navbar a:hover {
   background: #ddd;
   color: black;
