--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,9 +12,10 @@ body {
 }
 
 .page-header {
+  height: 422px;
   background-image: url("https://i.imgur.com/XmiigWx.png");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 1023px;
   background-attachment: fixed;
   background-position: center top;
 }
