--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
+      <a href="https://otaxgaming.com/"><img src="https://otaxgaming.com/images/OTAXGaming.png" height="50px"></a>
     </div>
 
     <header class="page-header" role="banner">
