--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
+    
     <meta property="og:title" content="Otax Gaming">
     <meta property="og:description" content="Otax Gaming adalah komuniti PC gaming Malaysia, kami bermain pelbagai permainan video di PC termasuk Monster Hunter, Destiny 2, Left 4 Dead 2, Among Us, Phasmophobia dan banyak lagi! Kami juga ada mengadakan acara mingguan seperti game night, movie night dan banyak lagi!
 ">
@@ -27,7 +29,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="https://otaxgaming.com/"><img src="https://otaxgaming.com/images/OTAXGaming.png" height="50px"></a>
+      <a href="https://otaxgaming.com/"><img src="/images/OTAXGaming.png" height="50px"></a>
     </div>
 
     <header class="page-header" role="banner">
