--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <title>Otax Gaming</title>
     <link rel="shortcut icon" type="image/png" href="/images/OTAXGaming.png">
     
     <meta property="og:title" content="Otax Gaming">
