--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@ body {
 }
 
 .page-header {
+  margin-top: 40px;
   height: 422px;
   background-image: url("https://i.imgur.com/XmiigWx.png");
   background-repeat: no-repeat;
