--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,16 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Clients</a>
+      <a href="#">Contact</a>
+    </div>
+    
     <div class="navbar">
+      <a><button class="openbtn" onclick="openNav()">☰ Open Sidebar</button></a>
       <a href="https://otaxgaming.com/"><img src="/images/OTAXGaming.png" height="40px"></a>
     </div>
 
@@ -44,7 +53,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}-->
     </header>
-
+    
     <main id="content" class="main-content" role="main">
       {{ content }}
 
