--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,7 +61,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  /*background-color: #111;*/
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -91,7 +91,7 @@ body {
 .openbtn {
   font-size: 20px;
   cursor: pointer;
-  background-color: #111;
+  /*background-color: #111;*/
   color: white;
   padding: 10px 15px;
   border: none;
