--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ body {
 .page-header {
   margin-top: 40px;
   height: 422px;
-  background-image: url("https://i.imgur.com/XmiigWx.png");
+  background-image: url("/images/OTAXBanner.png");
   background-repeat: no-repeat;
   background-size: 1023px;
   background-position: center top;
