--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3896,7 +3896,7 @@ input, select, textarea {
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
 				display: block;
-				height: 44px;
+				height: 60px;
 				left: 0;
 				position: fixed;
 				top: 0;
@@ -3945,7 +3945,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						/*background: #e44c65;*/
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
@@ -3955,7 +3955,7 @@ input, select, textarea {
 						line-height: 44px;
 						position: absolute;
 						text-align: center;
-						top: 0;
+						top: 5px;
 						width: 54px;
 					}
 
