--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,12 +111,14 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e44c65;
+		/*color: #e44c65;*/
+		color: #d6ae0a;
 		text-decoration: none;
 	}
 
 		a:hover {
-			color: #e44c65 !important;
+			/*color: #e44c65 !important;*/
+			color: #d6ae0a !important;
 			border-bottom-color: transparent;
 		}
 
